fix styling for media modal; stuck trying to get normal modal to view properly

--- a/app/assets/stylesheets/navbar.scss
+++ b/app/assets/stylesheets/navbar.scss
@@ -7,36 +7,28 @@ nav.navbar {
     position: absolute;
     width: 100%;
     left: 0;
-/*    text-align: right;
-*/    margin:0 auto;
+    margin:0 auto;
 }
 
-/*a.navbar-brand
-{
-    position: absolute;
-    width: 100%;
-    left: 0;
-    text-align: left;
-    font-family: 'Gloria Hallelujah', cursive;
-    font-size: 30px;
-    margin: 0 auto 0 0
-}*/
 
 .navbar-toggle {
     z-index:3;
 }
 
-div.speak-logo {
+div.speak-box {
     position: absolute;
     max-width: 200px;
     margin: 0 0 0 100px;
+    z-index: 1;
 }
 
-.speak-logo a , :hover {
+a.speak-logo {
     font-family: 'Gloria Hallelujah', cursive;
     font-size: 35px;
     text-decoration: none;
+
 }
+
 
 
 @media (min-width: 768px){
@@ -45,21 +37,19 @@ div.speak-logo {
       margin-right: 10px;
   }
 
-/*  .navbar>.container .navbar-brand, .navbar>.container-fluid .navbar-brand {
-      margin-left: 20px;
-  }*/
-
-div.speak-logo {
+  div.speak-box {
     position: absolute;
     max-width: 200px;
     margin: 0 0 0 100px;
-}
+    z-index: 1;
+  }
 
-.speak-logo a , :hover {
-    font-family: 'Gloria Hallelujah', cursive;
-    font-size: 35px;
-    text-decoration: none;
-}
+  a.speak-logo {
+      font-family: 'Gloria Hallelujah', cursive;
+      font-size: 35px;
+      text-decoration: none;
+
+  }
 
   a.dropdown-toggle {
     font-family: 'Gloria Hallelujah', cursive;
